--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -18,10 +18,10 @@
     <div class="sign-up-rightside">
       <div class="sign-up-form" id="form">
         <h1 id="formHeader">Criar uma conta</h1>
-        <p class="alredy-signed" id="signLinks">
+        <!-- <p class="alredy-signed" id="signLinks">
           Ja possui uma conta?
           <button onclick="switchPage(this)">Entrar</button>
-        </p>
+        </p> -->
         <div class="name-row">
           <input id="inputRazaoSocial" placeholder="Razão social" type="text">
           <input id="inputNomeFantasia" placeholder="Nome fantasia" type="text">
