Correção dos tipos dos inputs de senha

--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -30,7 +30,7 @@
           <input id="inputNomeFantasia" placeholder="Nome fantasia" type="text">
         </div>
         <input placeholder="Email" type="text">
-        <input placeholder="Insira sua senha" type="text">
+        <input placeholder="Insira sua senha" type="password">
         <button>  
           Criar conta
         </button>
