adiciona melhoria na responsividade da autenticacao

--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -20,7 +20,16 @@
     </div>
     <div class="sign-up-rightside">
       <div class="sign-up-form" id="form">
-        <h1 id="formHeader">Criar uma conta</h1>
+        <h1 id="formHeader">
+          Criar uma conta
+          <span style="display: none;" id="spanLogoHeader">
+            <object 
+            data="./assets/logo.svg" 
+            type="image/svg+xml">
+            Logo da Respira São Paulo
+            </object>
+          </span>
+        </h1>
         <!-- <p class="alredy-signed" id="signLinks">
           Ja possui uma conta?
           <button onclick="switchPage(this)">Entrar</button>
