--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="icon" href="./assets/logo.svg">
   <title>Início</title>
 </head>
 <body>
-    <div>
-      
+    <div class="default-nav-bar">
+      <div class="logo-nav-container">
+        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      </div>
+      <a href="/index.html" class="nav-selected">
+        Início
+      </a>
+      <a href="/autenticacao.html">
+        Entrar
+      </a>
+      <a href="">
+        Sobre
+      </a>
+      <a href="">
+        Contatos
+      </a>
+    </div>
+    <div class="mobile-nav-bar" style="display: none;">
+      <div class="logo-nav-container">
+        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      </div>
+      <button onclick="openSidebar()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-layout-text-window-reverse" viewBox="0 0 16 16">
+          <path d="M13 6.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5m0 3a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5m-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1z"/>
+          <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zM2 1a1 1 0 0 0-1 1v1h14V2a1 1 0 0 0-1-1zM1 4v10a1 1 0 0 0 1 1h2V4zm4 0v11h9a1 1 0 0 0 1-1V4z"/>
+        </svg>
+      </button>
+    </div>
+    <div class="main-container">
+      <div id="sideBar" class="side-bar" style="display: none;">
+        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <a href="/index.html" class="nav-selected">
+          Início
+        </a>
+        <a href="/autenticacao.html">
+          Entrar
+        </a>
+        <a href="">
+          Sobre
+        </a>
+        <a href="">
+          Contatos
+        </a>
+      </div>
+      <div class="leftside-container">
+        <div class="row-marketing">
+          <h1>
+            <b>
+              São Paulo, <br>
+              A maior cidade da <br>
+              América Latina, <br>
+            </b>
+            com o melhor ar <br>
+            para todos.
+          </h1>
+        </div>
+        <div class="row-button">
+          <button>
+            conheça nosso projeto
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
 </body>
 </html>
+<script src="./js/index.js"></script>
