--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,14 @@
     </h3>
     <img class="pessoas" src="./assets/imgpessoas.png" alt="">
   </div>
+  <div class="background">
+    <div class="fundoperfil"></div>
+    <div class="fundoperfil2"></div>
+    <div class="fundoperfil3"></div>
+
+  </div>
+  
+
 
 </body>
 
