Atualização da home page

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
         </button>
       </div>
     </div>
-  </div><br><br>
+  </div>
   <div class="carousel">
     <div class="slide">
       <img src="./assets/imgcidpoluida.png" alt="Imagem 1">
@@ -96,7 +96,7 @@
       <img src="./assets/imgusina.png" alt="Imagem 3">
       <div class="overlay-text">emeoiwjrcnrijcnqeincrqicjcnreenircpircqpjqrc</div>
     </div>
-  </div><br><br>
+  </div>
   <div class="container">
     <div class="card">
       <h2>Missão</h2>
@@ -116,7 +116,7 @@
         Aliquam nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus.
         Nam mattis, felis ut adipiscing.</p>
     </div>
-  </div><br><br>
+  </div>
   <div class="historia">
     <img class="cidade" src="./assets/imgcid.png" alt="">
     <h1>Nossa História</h1>
@@ -128,16 +128,29 @@
     <img class="pessoas" src="./assets/imgpessoas.png" alt="">
   </div>
   <div class="background">
-    <div class="fundoperfil"></div>
-    <div class="fundoperfil2"></div>
-    <div class="fundoperfil3"></div>
-
+    <div class="fundoperfil">
+      <h4>Guilherme Antonio Alves de Souza</h4>
+    </div>
+    <div class="fundoperfil2">
+      <h4>Rafael Barbosa Fernandes</h4>
+    </div>
+    <div class="fundoperfil3">
+      <h4>João Vitor Ohi Santos</h4>
+    </div>
+    <div class="fundoperfil4">
+      <h4>Ricardo de Oliveira Nicolau</h4>
+    </div>
+    <div class="fundoperfil5">
+      <h4>Shirley Ferreira Lima</h4>
+    </div>
+    <div class="fundoperfil6">
+      <h4>Lucas Hernandes Furquim</h4>
+    </div>
   </div>
-  
-
-
+  <footer class="footer">
+    
+  </footer>
 </body>
-
 </html>
 <script src="./js/index.js">
 
