Atualizações da home page

--- a/public/index.html
+++ b/public/index.html
@@ -100,21 +100,25 @@
   <div class="container">
     <div class="card">
       <h2>Missão</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.
-        Aliquam nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus.
-        Nam mattis, felis ut adipiscing.</p>
+      <p>A Respira SP tem como missão mitigar a emissão de gases poluentes, através do aumento da fiscalização, e
+        minimizar seus impactos na qualidade de vida da população, com foco na minimização de problemas respiratórios.
+        Utilizamos buscas avançada para capturar dados precisos e gerar gráficos inteligentes, promovendo soluções
+        sustentáveis e ações eficazes para um futuro mais saudável.</p>
     </div>
     <div class="card">
       <h2>Visão</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.
-        Aliquam nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus.
-        Nam mattis, felis ut adipiscing.</p>
+      <p>Ser referência na transformação ambiental por meio da tecnologia e do engajamento social, capacitando órgãos
+        governamentais a promover um futuro mais sustentável e saudável.</p>
     </div>
     <div class="card">
       <h2>Valores</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.
-        Aliquam nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus.
-        Nam mattis, felis ut adipiscing.</p>
+      <p><b>Sustentabilidade</b> – Compromisso com a preservação do meio ambiente e a promoção de práticas que garantam um
+        futuro mais saudável para as próximas gerações.
+        <b>Pensamento empreendedor</b> – Busca constante por inovação, criatividade e soluções eficazes para transformar
+        desafios em oportunidades.
+       <b>Inovação</b> – Utilização de tecnologia de ponta para desenvolver soluções eficientes no monitoramento ambiental
+       <b>Transparência</b>  – Comunicação clara e aberta com a sociedade, garantindo confiança e credibilidade em todas as
+        nossas ações.</p>
     </div>
   </div>
   <div class="historia">
@@ -148,10 +152,10 @@
     </div>
   </div>
   <footer class="footer">
-    
+
   </footer>
 </body>
+
 </html>
 <script src="./js/index.js">
-
 </script>
