Atualizações da home page

--- a/public/index.html
+++ b/public/index.html
@@ -112,13 +112,17 @@
     </div>
     <div class="card">
       <h2>Valores</h2>
-      <p><b>Sustentabilidade</b> – Compromisso com a preservação do meio ambiente e a promoção de práticas que garantam um
+      <p><b>Sustentabilidade</b> – Compromisso com a preservação do meio ambiente e a promoção de práticas que garantam
+        um
         futuro mais saudável para as próximas gerações.
         <b>Pensamento empreendedor</b> – Busca constante por inovação, criatividade e soluções eficazes para transformar
         desafios em oportunidades.
-       <b>Inovação</b> – Utilização de tecnologia de ponta para desenvolver soluções eficientes no monitoramento ambiental
-       <b>Transparência</b>  – Comunicação clara e aberta com a sociedade, garantindo confiança e credibilidade em todas as
-        nossas ações.</p>
+        <b>Inovação</b> – Utilização de tecnologia de ponta para desenvolver soluções eficientes no monitoramento
+        ambiental
+        <b>Transparência</b> – Comunicação clara e aberta com a sociedade, garantindo confiança e credibilidade em todas
+        as
+        nossas ações.
+      </p>
     </div>
   </div>
   <div class="historia">
@@ -151,16 +155,20 @@
       <h4>Lucas Hernandes Furquim</h4>
     </div>
   </div>
-  <footer class="footer">
-      
-       <a href="">
-        <img class="linkedin" src="./assets/iconelink.png" alt="">
-       </a>
-       <a href="">
-        <img src="" alt="">
-       </a>
   
-  </footer>
+  <footer class="footer">
+    <h5>Fale Conosco:</h5>
+    
+    <div class="contact">
+        <img class="icon" src="./assets/iconemail.png" alt="Email">
+        <h5 class="text">respirasp@sptech.school</h5>
+    </div>
+
+    <div class="contact">
+        <img class="iconwpp" src="./assets/wpp.png" alt="WhatsApp">
+        <h5 class="text">11 996072890</h5>
+    </div>
+</footer>
 </body>
 
 </html>
