adiciona correcoes no tamanho e na responsividade

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,12 @@
     <a href="./autenticacao.html">
       Entrar
     </a>
-
+    <a href="">
+      Sobre
+    </a>
+    <a href="">
+      Contatos
+    </a>
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
@@ -64,7 +69,7 @@
             América Latina, <br>
           </b>
           com o melhor ar <br>
-          para todos.
+          padivra todos.
         </h1>
       </div>
       <div class="row-button">
@@ -153,18 +158,22 @@
   </div>
   
   <footer class="footer">
-    <h5>Fale Conosco:</h5>
-    
-    <div class="contact">
-        <img class="icon" src="./assets/iconemail.png" alt="Email">
-        <h5 class="text">respirasp@sptech.school</h5>
-    </div>
-
-    <div class="contact">
+    <div class="talk-to-us-footer">
+      <div class="respira-footer-row">
+        <img src="./assets/logo.svg" alt="">
+        Respira São Paulo
+      </div>
+      <p>Fale Conosco:</p>
+      <div class="contact">
+        <img class="icon" src="./assets/iconemail.png" alt="Email">          
+        <p class="text">respirasp@sptech.school</p>
+      </div>
+      <div class="contact">
         <img class="iconwpp" src="./assets/wpp.png" alt="WhatsApp">
-        <h5 class="text">11 996072890</h5>
+        <p class="text">11 996072890</p>
+      </div>
     </div>
-</footer>
+  </footer>
 </body>
 
 </html>
