finalizacao do footer completo

--- a/public/index.html
+++ b/public/index.html
@@ -163,14 +163,35 @@
         <img src="./assets/logo.svg" alt="">
         Respira São Paulo
       </div>
-      <p>Fale Conosco:</p>
+      <p id="footer-header">Fale Conosco:</p>
       <div class="contact">
-        <img class="icon" src="./assets/iconemail.png" alt="Email">          
+        <img class="icon" src="https://icons.veryicon.com/png/o/business/oa-office/mail-227.png" alt="Email">          
         <p class="text">respirasp@sptech.school</p>
       </div>
       <div class="contact">
-        <img class="iconwpp" src="./assets/wpp.png" alt="WhatsApp">
+        <img class="icon" src="https://www.iconpacks.net/icons/1/free-phone-icon-1-thumb.png" alt="WhatsApp">
         <p class="text">11 996072890</p>
+      </div>
+      <p id="rightRespira">© 2025 Respira São Paulo</p>
+    </div>
+    <div class="our-social-media-footer">
+      <p id="footer-header">Nossas redes sociais</p>
+      <div class="contact">
+        <img class="icon" src="https://devicon-website.vercel.app/api/github/original.svg" alt="Logo github"/>
+        <a class="link-text" href="https://github.com/grupo-2-pi/Respira-Sao-Paulo">Github</a>
+      </div>
+      <div class="contact">
+        <img class="icon" src="https://devicon-website.vercel.app/api/linkedin/original.svg" alt="Logo linkedin"/>
+        <a class="link-text" href="#">Linkedin</a>
+      </div>
+    </div>
+    <div class="about-us-footer">
+      <p id="footer-header">Projeto</p>
+      <div class="contact" onclick="goToHistory()">
+        <p class="text">História</p>
+      </div>
+      <div class="contact" onclick="goToCrenca()">
+        <p class="text">Nossa crença</p>
       </div>
     </div>
   </footer>
