adiciona melhorias na home page no alinhamento das fotos do time e na estrutura da nossa historia

--- a/public/index.html
+++ b/public/index.html
@@ -99,16 +99,18 @@
     </div>
   </div>
   <div class="historia">
-    <img class="cidade" src="./assets/imgcid.png" alt="">
-    <h1>Nossa História</h1>
-    <h3>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam
-      nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis,
-      felis ut adipiscing Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
-    </h3>
-    <img class="pessoas" src="./assets/imgpessoas.png" alt="">
+      <h1>Nossa História</h1>
+      <div class="history-row">
+        <h3>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam
+          nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis,
+          felis ut adipiscing Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+        </h3>
+        <img class="pessoas" src="./assets/imgpessoas.png" alt="">
+      </div>
   </div>
-  <div class="container">
+<!--   <hr class="separator-row">
+ -->  <div class="container">
     <div class="card">
       <img class="card-icon" src="https://cdn-icons-png.flaticon.com/512/470/470222.png" alt="Icone alvo">
       <h2>Missão</h2>
@@ -140,23 +142,28 @@
     </div>
   </div>
   <div class="background">
-    <div class="fundoperfil">
-      <h4>Guilherme Antonio Alves de Souza</h4>
+    <h1>Nosso time</h1>
+    <div class="background-row">
+      <div class="fundoperfil">
+        <h4>Guilherme Antonio Alves de Souza</h4>
+      </div>
+      <div class="fundoperfil2">
+        <h4>Rafael Barbosa Fernandes</h4>
+      </div>
+      <div class="fundoperfil3">
+        <h4>João Vitor Ohi Santos</h4>
+      </div>
     </div>
-    <div class="fundoperfil2">
-      <h4>Rafael Barbosa Fernandes</h4>
-    </div>
-    <div class="fundoperfil3">
-      <h4>João Vitor Ohi Santos</h4>
-    </div>
-    <div class="fundoperfil4">
-      <h4>Ricardo de Oliveira Nicolau</h4>
-    </div>
-    <div class="fundoperfil5">
-      <h4>Shirley Ferreira Lima</h4>
-    </div>
-    <div class="fundoperfil6">
-      <h4>Lucas Hernandes Furquim</h4>
+    <div class="background-row">
+      <div class="fundoperfil4">
+        <h4>Ricardo de Oliveira Nicolau</h4>
+      </div>
+      <div class="fundoperfil5">
+        <h4>Shirley Ferreira Lima</h4>
+      </div>
+      <div class="fundoperfil6">
+        <h4>Lucas Hernandes Furquim</h4>
+      </div>
     </div>
   </div>
   <div class="feedback-container">
