adiciona responsividade da tela de ajude a contribuir

--- a/public/index.html
+++ b/public/index.html
@@ -101,16 +101,16 @@
   <div class="historia">
       <h1>Nossa História</h1>
       <div class="history-row">
-        <h3>
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam
           nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis,
           felis ut adipiscing Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
-        </h3>
+        </p>
         <img class="pessoas" src="./assets/imgpessoas.png" alt="">
       </div>
   </div>
-<!--   <hr class="separator-row">
- -->  <div class="container">
+<!--   <hr class="separator-row"> !-->
+  <div class="container">
     <div class="card">
       <img class="card-icon" src="https://cdn-icons-png.flaticon.com/512/470/470222.png" alt="Icone alvo">
       <h2>Missão</h2>
