alteracao nas cores dos formularios de login e cadastro

--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -13,11 +13,14 @@
 <body>
   <div class="sign-up-container">
     <div class="sign-up-leftside" id="leftsideContainer">
+      <h1>Vamos mudar o ar de São Paulo <span>juntos</span></h1>
       <div class="image-container" id="imageContainer">
-
+        <img src="./assets/screenshots/image.png" alt="Screenshot do inicio do Respira Sâo Paulo">
       </div>
-      <span onclick="switchPage(this)" id="btnSignUp" class="btn-switch btn-clicked"></span>
-      <span onclick="switchPage(this)" id="btnSignIn" class="btn-switch"></span>
+      <div class="buttons-row">
+        <span onclick="switchPage(this)" id="btnSignUp" class="btn-switch btn-clicked"></span>
+        <span onclick="switchPage(this)" id="btnSignIn" class="btn-switch"></span>
+      </div>
     </div>
     <div class="sign-up-rightside">
       <div class="sign-up-form" id="form">
